--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -24,6 +24,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/back_arrow"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -99,10 +100,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
                 android:layout_marginLeft="22dp"
-                android:numColumns="3"
+                android:layout_marginTop="10dp"
                 android:horizontalSpacing="20dp"
+                android:numColumns="3"
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="10dp">
 
