# 登録ダイアログ表示処理  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/RegistActivity.java  - ダイアログフラグメント呼び出し処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/BookReviewDialogFragment.java  - ダイアログフラグメント表示処理を追加  - app/src/main/res/layout/activity_login.xml  - ログイン画面デザインを一部修正  - app/src/main/res/layout/activity_regist.xml  - 登録ボタンにidを付与  - app/src/main/res/values/strings.xml  - ダイアログ表示文言を追加  - app/src/main/res/values/styles.xml  - ダイアログのスタイルを追加(未使用)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,17 +55,21 @@
                         android:layout_height="40dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="22dp"
-                        android:background="@color/clear_white"
+                        android:background="@drawable/shape_login_button"
                         android:hint="@string/login_name"
-                        android:textColor="@color/black" />
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/clear_white" />
 
                     <EditText
                         android:layout_width="200dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center_horizontal"
-                        android:background="@color/clear_white"
+                        android:background="@drawable/shape_login_button"
+                        android:gravity="center"
                         android:hint="@string/login_pass"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/clear_white" />
 
                     <LinearLayout
                         android:layout_width="260dp"
