# ヘルパークラス作成 / ログイン処理作成 / ダイアログフラグメント表示処理作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/LoginActivity.java  - ログインdao処理追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/RegistActivity.java  - ダイアログフラグメント表示処理修正  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/constants/KansouContract.java  - 定数クラスを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/constants/KansouProvider.java  - プロバイダークラスを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dao/KansouDao.java  - daoクラスを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dto/KansouEntity.java  - dtoを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/LogUtil.java  - ログ出力の定型文クラスを作成  - app/src/main/res/layout/activity_login.xml  - idを追加  - app/src/main/res/layout/activity_regist.xml  - textを@stringsに変更  - app/src/main/res/values/strings.xml  - タイトルを追加

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,17 +51,19 @@
                     android:orientation="vertical">
 
                     <EditText
+                        android:id="@+id/login_user_name"
                         android:layout_width="200dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="22dp"
                         android:background="@drawable/shape_login_button"
-                        android:hint="@string/login_name"
                         android:gravity="center"
+                        android:hint="@string/login_name"
                         android:textColor="@color/white"
                         android:textColorHint="@color/clear_white" />
 
                     <EditText
+                        android:id="@+id/login_user_password"
                         android:layout_width="200dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center_horizontal"
