--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -89,9 +89,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:text="titletitletitle"
+                    android:text="@string/book_default_title"
                     android:textColor="@color/white"
-                    android:textSize="24dp" />
+                    android:textSize="18dp" />
 
             </LinearLayout>
 
