# ログインバリデーション追加 / DB処理修正  - app/src/main/AndroidManifest.xml  - マニフェストにproviderを追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/LoginActivity.java  - バリデーションチェックを追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/MainActivity.java  - 一時的にユーザー情報の取得処理を記載  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/constants/KansouProvider.java  - 全体的に修正  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dao/KansouDao.java  - 登録処理などを追加  - app/src/main/res/drawable/ic_attention.png  - バリデーションチェック時に表示するアイコンを追加  - app/src/main/res/layout/activity_login.xml  - エラーメッセージ表示ビューを追加  - app/src/main/res/values/colors.xml  - エラーメッセージ文言カラーを追加  - app/src/main/res/values/strings.xml  - エラーメッセージ文言を追加

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="clear_white">#baffffff</color>
     <color name="gauge_color">#517394</color>
     <color name="gauge_init_color">#c6858687</color>
+    <color name="error_msg_color">#5fa6a9</color>
 </resources>
