--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,6 +105,35 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="240dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/error_ic"
+                        android:layout_width="0dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="2"
+                        android:src="@drawable/ic_attention"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/error_message"
+                        android:layout_width="0dp"
+                        android:layout_height="70dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="8"
+                        android:textColor="@color/error_msg_color"
+                        android:textSize="18dp" />
+
+                </LinearLayout>
+
             </LinearLayout>
 
         </RelativeLayout>
