# BOOKINFOのDB処理fix  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/ListActivity.java  - ゲージビュー処理を作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/LoginActivity.java  - BOOKINFOテストデータ登録処理  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/MainActivity.java  - 無修正  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/RegistActivity.java  - Listで押下されたViewを取得処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/adapter/BookListGridAdapter.java  - 押下されたViewを通知する処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dao/KansouDao.java  - BOOKINFO登録処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/BookInfoHelper.java  - 不要なコメントアウトを削除  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/PhoneInfo.java  - ゲージビュー作成用の端末情報取得処理を追加  - app/src/main/res/layout/activity_list.xml  - ゲージビュー修正

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -75,13 +75,14 @@
                     android:layout_toLeftOf="@+id/box2">
 
                     <TextView
-                        android:layout_width="230dp"
+                        android:id="@+id/max_gauge"
+                        android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:background="@color/clear_white" />
 
                     <TextView
                         android:id="@+id/count_gauge"
-                        android:layout_width="60dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@color/gauge_color" />
 
