--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -51,12 +51,11 @@
 
             </LinearLayout>
 
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
-                android:layout_weight="4.5"
+                android:layout_weight="4"
                 android:orientation="vertical">
 
                 <ImageView
@@ -67,17 +66,16 @@
                     android:layout_marginTop="20dp"
                     android:src="@drawable/no_book_img" />
 
-                <EditText
+                <TextView
                     android:id="@+id/regist_book_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:focusable="false"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="6dp"
                     android:gravity="center"
-                    android:hint="@string/regist_book_title"
+                    android:text="@string/regist_book_title"
                     android:textColor="@color/white"
-                    android:textColorHint="@color/clear_white"
                     android:textSize="18dp" />
 
                 <TextView
@@ -92,7 +90,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
-                android:layout_weight="5.5"
+                android:layout_marginTop="22dp"
+                android:layout_weight="6"
                 android:orientation="vertical">
 
                 <GridView
