# タイムラインの大枠を作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/RegistActivity.java  - 画像ID取得の準備を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/adapter/TimeLineGridViewAdapter.java  - タイムライン感想文表示ビューを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/adapter/TimeLineListViewAdapter.java  - タイムライン表示ビューを作成  - app/src/main/res/drawable/change_main_timeline.xml  - メイン画面にタイムライン用ボタンを追加  - app/src/main/res/drawable/timeline.jpg  - メイン画面用タイムライン画像を追加  - app/src/main/res/drawable/timeline_click.jpg  - メイン画面用タイムライン画像を追加  - app/src/main/res/layout/activity_main.xml  - タイムライン表示ボタンを追加  - app/src/main/res/layout/activity_timeline.xml  - タイムライン表示用xmlを作成  - app/src/main/res/layout/item_timeline_list.xml  - タイムライン表示用アイテムxmlを作成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,9 +40,18 @@
                 android:id="@+id/main_setting"
                 android:layout_width="300dp"
                 android:layout_height="100dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/shape_login_button"
                 android:padding="2dp"
                 android:src="@drawable/change_main_setting" />
+
+            <ImageView
+                android:id="@+id/main_time_line"
+                android:layout_width="300dp"
+                android:layout_height="100dp"
+                android:background="@drawable/shape_login_button"
+                android:padding="2dp"
+                android:src="@drawable/change_main_timeline" />
 
         </LinearLayout>
     </RelativeLayout>
