--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,45 +14,127 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/main_regist"
-                android:layout_width="300dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/shape_login_button"
-                android:padding="2dp"
-                android:src="@drawable/change_main_regist" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1">
 
-            <ImageView
-                android:id="@+id/main_list"
-                android:layout_width="300dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/shape_login_button"
-                android:padding="2dp"
-                android:src="@drawable/change_main_list" />
+                <ImageView
+                    android:id="@+id/layout_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/regist" />
 
-            <ImageView
-                android:id="@+id/main_setting"
-                android:layout_width="300dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/shape_login_button"
-                android:padding="2dp"
-                android:src="@drawable/change_main_setting" />
+            </LinearLayout>
 
-            <ImageView
-                android:id="@+id/main_time_line"
-                android:layout_width="300dp"
-                android:layout_height="100dp"
-                android:background="@drawable/shape_login_button"
-                android:padding="2dp"
-                android:src="@drawable/change_main_timeline" />
+            <FrameLayout
+                android:id="@+id/fragment_layout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="8"></FrameLayout>
 
+            <!--<ImageView-->
+            <!--android:id="@+id/main_regist"-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:background="@drawable/shape_login_button"-->
+            <!--android:padding="2dp"-->
+            <!--android:src="@drawable/change_main_regist" />-->
+
+            <!--<ImageView-->
+            <!--android:id="@+id/main_list"-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:background="@drawable/shape_login_button"-->
+            <!--android:padding="2dp"-->
+            <!--android:src="@drawable/change_main_list" />-->
+
+            <!--<ImageView-->
+            <!--android:id="@+id/main_setting"-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:background="@drawable/shape_login_button"-->
+            <!--android:padding="2dp"-->
+            <!--android:src="@drawable/change_main_setting" />-->
+
+            <!--<ImageView-->
+            <!--android:id="@+id/main_time_line"-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:background="@drawable/shape_login_button"-->
+            <!--android:padding="2dp"-->
+            <!--android:src="@drawable/change_main_timeline" />-->
+            <!--</LinearLayout>-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_alignParentBottom="true"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/tab_regist"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_add" />
+
+                <ImageView
+                    android:id="@+id/tab_list"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_book" />
+
+                <ImageView
+                    android:id="@+id/tab_search"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_search" />
+
+                <ImageView
+                    android:id="@+id/tab_favorite"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_favorite" />
+
+                <ImageView
+                    android:id="@+id/tab_followers"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_followers" />
+
+                <ImageView
+                    android:id="@+id/tab_setting"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_setting" />
+
+            </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
