--- a/app/src/main/res/layout/fragment_regist.xml
+++ b/app/src/main/res/layout/fragment_regist.xml
@@ -21,15 +21,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
-                android:layout_weight="4"
+                android:layout_weight="3.5"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/regist_book_img"
-                    android:layout_width="130dp"
-                    android:layout_height="170dp"
+                    android:layout_width="120dp"
+                    android:layout_height="160dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
                     android:src="@drawable/no_book_img" />
 
                 <TextView
@@ -37,7 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="4dp"
                     android:layout_marginTop="6dp"
                     android:gravity="center"
                     android:text="@string/regist_book_title"
@@ -53,52 +52,56 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="22dp"
-                android:layout_weight="6"
+                android:layout_weight="4"
                 android:orientation="vertical">
 
                 <GridView
                     android:id="@+id/regist_book_review"
                     android:layout_width="300dp"
                     android:layout_height="242dp"
-                    android:layout_gravity="center_vertical"
+                    android:layout_gravity="center_horizontal"
                     android:numColumns="10"></GridView>
 
-                <FrameLayout
-                    android:layout_width="wrap_content"
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="12dp">
 
                     <Button
                         android:id="@+id/regist_book_review_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/shape_login_button"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/shape_regist_button"
+                        android:paddingLeft="14dp"
+                        android:paddingRight="14dp"
                         android:text="@string/regist_book_log"
                         android:textColor="@drawable/change_login_text_color"
-                        android:textSize="20dp" />
+                        android:textSize="18dp" />
 
                     <Button
                         android:id="@+id/regist_book_review_update_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/shape_login_button"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/shape_regist_button"
+                        android:paddingLeft="14dp"
+                        android:paddingRight="14dp"
                         android:text="@string/regist_book_update_log"
                         android:textColor="@drawable/change_login_text_color"
-                        android:textSize="20dp"
+                        android:textSize="18dp"
                         android:visibility="gone" />
-
-                </FrameLayout>
-
-            </LinearLayout>
+                </RelativeLayout>
+            </FrameLayout>
         </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
